# AI-Dispatcher-int

./: .env.example  .gitignore  README.md  project.md  pyproject.toml  requirements.txt
configs/: agent_llm_config.py  equipment.yaml  load_config.py  loads.yaml  prompts.yaml  rules.yaml  rules_config.py  settings.py
data/raw/: conversation.txt  conversation_hard.txt  loads.xlsx
prompts/: conversation_organizer.md  equipment_matcher.md  profile_extractor.md  readme_generator.md
scripts/: create_submission.py  generate_submission.py  run_pipeline.py  run_tests.py  test_conversation_organizer.py  test_geocoder.py  test_llm.py  test_load_reader.py  test_matching.py  test_profile_extractor.py
src/: __init__.py  main.py
src/agents/: __init__.py  base.py  conversation_organizer.py  equipment_matcher.py  profile_extractor.py  readme_generator.py
src/domain/: __init__.py  downstream_context.py  enums.py  evidence_normalizers.py  field_value_coercion.py  models.py  schemas.py
src/outputs/: submission.md
src/pipelines/: __init__.py  extraction_pipeline.py  matching_pipeline.py  submission_pipeline.py
src/rules/: avoided_location_rule.py  base_rule.py  engine.py  missing_data_rule.py  rate_rule.py  trailer_rule.py  user_messages.py  weight_rule.py
src/services/: __init__.py  audit_service.py  distance_service.py  equipment_service.py  geocoder.py  load_normalizer.py  load_reader.py  location_service.py  ranking_service.py  rate_calculator.py  submission_formatter.py
src/utils/: cache.py  json_utils.py  prompts.py  validation.py
tests/unit/: test_distance.py  (+17 more)
(+23 files in other folders)
