[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dispatcher"
version = "0.1.0"
description = "AI-powered freight load dispatcher — match drivers to loads via conversation understanding and deterministic business rules"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
# LLM providers + agents. Install with `pip install -e ".[ai]"`.
ai = [
    "langchain-core>=0.3.0",
    "langchain-openai>=1.3.3",
    "langchain-anthropic>=1.4.7",
    "langchain-groq>=1.1.3",
    "langchain-google-genai>=4.2.5",
    "openai>=1.0.0",
    "anthropic>=0.39.0",
]

[project.scripts]
ai-dispatcher-run = "scripts.run_pipeline:main"
ai-dispatcher-test = "scripts.run_tests:main"
ai-dispatcher-submit = "scripts.generate_submission:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
